--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,135 @@
 .App {
   text-align: center;
+  --button-height: 50px;
+  font-family: "Nova Mono", monospace;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.calc-btn {
+  background-color: rgb(59, 59, 59);
+  outline: 1px solid black;
+  display: flex;
+  flex-direction: center;
+  color: white;
+  font-weight: bold;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.calc-btn:hover {
+  outline: 1px solid gainsboro;
+  z-index: 1;
+  color: black;
+  cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.btn-content {
+  margin: auto;
+}
+
+.calculator {
+  display: grid;
+  grid-template-areas:
+    "display display display display" "clear clear divide multiply"
+    "seven eight nine subtract" "four five six add" "one two three equals"
+    "zero zero decimal equals";
+  grid-template-rows: 75px repeat(5, 1fr);
+  width: 300px;
+  height: 375px;
+  padding: 5px;
+  background-color: black;
+  border: 2px solid gray;
+  margin: auto;
+  user-select: none;
+}
+
+.operation-btn {
+  background-color: gray;
+}
+
+#display {
+  grid-area: display;
+  justify-content: space-between;
+  align-items: flex-end;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  font-weight: bold;
+  font-family: "Orbitron", sans-serif;
+  padding: 5px;
+  width: 290px;
 }
 
-.App-link {
-  color: #61dafb;
+#operand-display {
+  color: goldenrod;
+  font-size: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#display .btn-content {
+  margin: unset;
+  padding-right: 8px;
+  font-size: 25px;
+}
+
+#clear {
+  grid-area: clear;
+  background-color: rgb(223, 69, 69);
+}
+
+#divide {
+  grid-area: divide;
+}
+
+#multiply {
+  grid-area: multiply;
+}
+
+#seven {
+  grid-area: seven;
+}
+
+#eight {
+  grid-area: eight;
+}
+
+#nine {
+  grid-area: nine;
+}
+
+#four {
+  grid-area: four;
+}
+
+#five {
+  grid-area: five;
+}
+
+#six {
+  grid-area: six;
+}
+
+#add {
+  grid-area: add;
+}
+
+#one {
+  grid-area: one;
+}
+
+#two {
+  grid-area: two;
+}
+
+#three {
+  grid-area: three;
+}
+
+#equals {
+  grid-area: equals;
+  background-color: cornflowerblue;
+}
+
+#zero {
+  grid-area: zero;
+}
+
+#decimal {
+  grid-area: decimal;
 }
